--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8" />
+  <meta name="viewport"  charset="utf-8" content="width=device-width, initial-scale=1.0">
   <title>PennyguardFrontend</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
